tests/rosetta/out/Rust/abelian-sandpile-model.error
rustc: exit status 1
error[E0434]: can't capture dynamic environment in a fn item
  --> /tmp/abelian-sandpile-model.rs:72:16
   |
72 |         pile = handlePile(&mut pile, hdim, hdim);
   |                ^^^^^^^^^^
   |
   = help: use the `|| { ... }` closure form instead

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:23:26
   |
23 |                 pile[y - 1 as usize][x as usize] = pile[y - 1 as usize][x as usize] + 1;
   |                          ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/abelian-sandpile-model.rs:23:24
   |
23 |                 pile[y - 1 as usize][x as usize] = pile[y - 1 as usize][x as usize] + 1;
   |                        ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[Vec<i32>]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:23:22
   |
23 |                 pile[y - 1 as usize][x as usize] = pile[y - 1 as usize][x as usize] + 1;
   |                      ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[Vec<i32>]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<Vec<i32>>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:23:61
   |
23 |                 pile[y - 1 as usize][x as usize] = pile[y - 1 as usize][x as usize] + 1;
   |                                                             ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/abelian-sandpile-model.rs:23:59
   |
23 |                 pile[y - 1 as usize][x as usize] = pile[y - 1 as usize][x as usize] + 1;
   |                                                           ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[Vec<i32>]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:23:57
   |
23 |                 pile[y - 1 as usize][x as usize] = pile[y - 1 as usize][x as usize] + 1;
   |                                                         ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[Vec<i32>]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<Vec<i32>>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:24:29
   |
24 |                 if pile[y - 1 as usize][x as usize] >= 4 {
   |                             ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/abelian-sandpile-model.rs:24:27
   |
24 |                 if pile[y - 1 as usize][x as usize] >= 4 {
   |                           ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[Vec<i32>]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:24:25
   |
24 |                 if pile[y - 1 as usize][x as usize] >= 4 {
   |                         ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[Vec<i32>]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<Vec<i32>>` to implement `Index<i32>`

error[E0425]: cannot find function `handlePile` in this scope
  --> /tmp/abelian-sandpile-model.rs:25:28
   |
25 |                     pile = handlePile(&mut pile, x, y - 1);
   |                            ^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:29:38
   |
29 |                 pile[y as usize][x - 1 as usize] = pile[y as usize][x - 1 as usize] + 1;
   |                                      ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/abelian-sandpile-model.rs:29:36
   |
29 |                 pile[y as usize][x - 1 as usize] = pile[y as usize][x - 1 as usize] + 1;
   |                                    ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:29:34
   |
29 |                 pile[y as usize][x - 1 as usize] = pile[y as usize][x - 1 as usize] + 1;
   |                                  ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<i32>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:29:73
   |
29 |                 pile[y as usize][x - 1 as usize] = pile[y as usize][x - 1 as usize] + 1;
   |                                                                         ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/abelian-sandpile-model.rs:29:71
   |
29 |                 pile[y as usize][x - 1 as usize] = pile[y as usize][x - 1 as usize] + 1;
   |                                                                       ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:29:69
   |
29 |                 pile[y as usize][x - 1 as usize] = pile[y as usize][x - 1 as usize] + 1;
   |                                                                     ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<i32>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:30:41
   |
30 |                 if pile[y as usize][x - 1 as usize] >= 4 {
   |                                         ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/abelian-sandpile-model.rs:30:39
   |
30 |                 if pile[y as usize][x - 1 as usize] >= 4 {
   |                                       ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:30:37
   |
30 |                 if pile[y as usize][x - 1 as usize] >= 4 {
   |                                     ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<i32>` to implement `Index<i32>`

error[E0425]: cannot find function `handlePile` in this scope
  --> /tmp/abelian-sandpile-model.rs:31:28
   |
31 |                     pile = handlePile(&mut pile, x - 1, y);
   |                            ^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:35:26
   |
35 |                 pile[y + 1 as usize][x as usize] = pile[y + 1 as usize][x as usize] + 1;
   |                          ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/abelian-sandpile-model.rs:35:24
   |
35 |                 pile[y + 1 as usize][x as usize] = pile[y + 1 as usize][x as usize] + 1;
   |                        ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0277]: the type `[Vec<i32>]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:35:22
   |
35 |                 pile[y + 1 as usize][x as usize] = pile[y + 1 as usize][x as usize] + 1;
   |                      ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[Vec<i32>]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<Vec<i32>>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:35:61
   |
35 |                 pile[y + 1 as usize][x as usize] = pile[y + 1 as usize][x as usize] + 1;
   |                                                             ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/abelian-sandpile-model.rs:35:59
   |
35 |                 pile[y + 1 as usize][x as usize] = pile[y + 1 as usize][x as usize] + 1;
   |                                                           ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0277]: the type `[Vec<i32>]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:35:57
   |
35 |                 pile[y + 1 as usize][x as usize] = pile[y + 1 as usize][x as usize] + 1;
   |                                                         ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[Vec<i32>]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<Vec<i32>>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:36:29
   |
36 |                 if pile[y + 1 as usize][x as usize] >= 4 {
   |                             ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/abelian-sandpile-model.rs:36:27
   |
36 |                 if pile[y + 1 as usize][x as usize] >= 4 {
   |                           ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0277]: the type `[Vec<i32>]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:36:25
   |
36 |                 if pile[y + 1 as usize][x as usize] >= 4 {
   |                         ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[Vec<i32>]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<Vec<i32>>` to implement `Index<i32>`

error[E0425]: cannot find function `handlePile` in this scope
  --> /tmp/abelian-sandpile-model.rs:37:28
   |
37 |                     pile = handlePile(&mut pile, x, y + 1);
   |                            ^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:41:38
   |
41 |                 pile[y as usize][x + 1 as usize] = pile[y as usize][x + 1 as usize] + 1;
   |                                      ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/abelian-sandpile-model.rs:41:36
   |
41 |                 pile[y as usize][x + 1 as usize] = pile[y as usize][x + 1 as usize] + 1;
   |                                    ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:41:34
   |
41 |                 pile[y as usize][x + 1 as usize] = pile[y as usize][x + 1 as usize] + 1;
   |                                  ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<i32>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:41:73
   |
41 |                 pile[y as usize][x + 1 as usize] = pile[y as usize][x + 1 as usize] + 1;
   |                                                                         ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/abelian-sandpile-model.rs:41:71
   |
41 |                 pile[y as usize][x + 1 as usize] = pile[y as usize][x + 1 as usize] + 1;
   |                                                                       ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:41:69
   |
41 |                 pile[y as usize][x + 1 as usize] = pile[y as usize][x + 1 as usize] + 1;
   |                                                                     ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<i32>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:42:41
   |
42 |                 if pile[y as usize][x + 1 as usize] >= 4 {
   |                                         ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/abelian-sandpile-model.rs:42:39
   |
42 |                 if pile[y as usize][x + 1 as usize] >= 4 {
   |                                       ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> /tmp/abelian-sandpile-model.rs:42:37
   |
42 |                 if pile[y as usize][x + 1 as usize] >= 4 {
   |                                     ^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<i32>` to implement `Index<i32>`

error[E0425]: cannot find function `handlePile` in this scope
  --> /tmp/abelian-sandpile-model.rs:43:28
   |
43 |                     pile = handlePile(&mut pile, x + 1, y);
   |                            ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `handlePile` in this scope
  --> /tmp/abelian-sandpile-model.rs:46:20
   |
46 |             pile = handlePile(&mut pile, x, y);
   |                    ^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> /tmp/abelian-sandpile-model.rs:48:16
   |
19 |     let handlePile = move |pile: &mut Vec<Vec<i32>>, x: i32, y: i32| -> Vec<Vec<i32>> {
   |                                                                         ------------- expected `Vec<Vec<i32>>` because of return type
...
48 |         return pile;
   |                ^^^^- help: try using a conversion method: `.to_vec()`
   |                |
   |                expected `Vec<Vec<i32>>`, found `&mut Vec<Vec<i32>>`
   |
   = note:         expected struct `Vec<_>`
           found mutable reference `&mut Vec<_>`

error: aborting due to 43 previous errors

Some errors have detailed explanations: E0277, E0308, E0425, E0434.
For more information about an error, try `rustc --explain E0277`.
